// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettiongsPage Render 1`] = `
<DocumentFragment>
  <div
    class="settings-page"
  >
    <div
      class="settings-page__row"
    >
      <div
        class="settings-page__title"
      >
        Автообновление:
      </div>
      <div
        class="checkbox false false undefined"
        data-testid="chk-auto"
      >
        <svg
          height="9"
          width="12"
        >
          <use
            xlink:href="#icon-checked"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettiongsPage change Interval 1`] = `
<DocumentFragment>
  <div
    class="settings-page"
  >
    <div
      class="settings-page__row"
    >
      <div
        class="settings-page__title"
      >
        Автообновление:
      </div>
      <div
        class="checkbox checkbox--checked false undefined"
        data-testid="chk-auto"
      >
        <svg
          height="9"
          width="12"
        >
          <use
            xlink:href="#icon-checked"
          />
        </svg>
      </div>
    </div>
    <div
      class="settings-page__row"
    >
      <div
        class="settings-page__title"
      >
        Интервал обновления:
      </div>
      <input
        data-testid="inp-interval"
        min="5"
        step="1"
        type="number"
        value="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettiongsPage click isAuto 1`] = `
<DocumentFragment>
  <div
    class="settings-page"
  >
    <div
      class="settings-page__row"
    >
      <div
        class="settings-page__title"
      >
        Автообновление:
      </div>
      <div
        class="checkbox checkbox--checked false undefined"
        data-testid="chk-auto"
      >
        <svg
          height="9"
          width="12"
        >
          <use
            xlink:href="#icon-checked"
          />
        </svg>
      </div>
    </div>
    <div
      class="settings-page__row"
    >
      <div
        class="settings-page__title"
      >
        Интервал обновления:
      </div>
      <input
        data-testid="inp-interval"
        min="5"
        step="1"
        type="number"
        value="5"
      />
    </div>
  </div>
</DocumentFragment>
`;
